[ui] 카테고리 추가, 커스텀 box 추가, css 수정
임시커밋

--- a/src/custom.scss
+++ b/src/custom.scss
@@ -1,6 +1,26 @@
-.box {
-  width: 100%;
-  max-width: 35rem;
-  height: 200px;
-  border: 2px solid #333;
-}
+// .box {
+//   width: 100%;
+//   max-width: 35rem;
+//   height: 200px;
+//   border: 2px solid #333;
+// }
+
+// .left-side {
+//   margin-left: 0rem;
+//   border-top-left-radius: 2rem;
+//   margin-top: 1rem;
+//   margin-bottom: 1rem;
+// }
+
+// .right-side {
+//   padding: 1rem;
+//   min-height: 100vh;
+//   position: relative;
+//   left: -4rem;
+//   background: #515139;
+//   margin: 0rem 0;
+//   border-radius: 4rem;
+//   width: 100%;
+//   margin-top: 12px;
+//   min-width: 1440px;
+// }
