--- a/src/custom.scss
+++ b/src/custom.scss
@@ -24,3 +24,61 @@
 //   margin-top: 12px;
 //   min-width: 1440px;
 // }
+
+.box {
+  &.summary {
+    display: flex;
+    .left {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+      padding: 0.4rem;
+      &.active {
+        background: #fff;
+        border-top: 1px solid red;
+        border-bottom: 1px solid red;
+        position: relative;
+        &:before {
+          content: "";
+          position: absolute;
+          right: -13px;
+          top: 0;
+          height: 31px;
+          width: 1rem;
+          z-index: 1;
+          background: #fff;
+        }
+      }
+
+      .selector {
+        display: flex;
+        align-items: center;
+
+        &.active {
+          background: #fff;
+          border-top: 1px solid red;
+          border-bottom: 1px solid red;
+        }
+      }
+    }
+
+    .right {
+      position: relative;
+      width: 100%;
+      height: 20rem;
+      background: #fff;
+      border-top: 1px solid red;
+      border-bottom: 1px solid red;
+      border-left: 1px solid red;
+    }
+  }
+}
+
+.tab-wrap {
+  display: flex;
+  width: 100%;
+}
+
+.right-side {
+  padding: 0 !important;
+}
