--- a/src/custom.scss
+++ b/src/custom.scss
@@ -72,6 +72,22 @@
       border-left: 1px solid red;
     }
   }
+
+  &.chat-list-box {
+    border: 1px solid red;
+    padding: 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 1rem;
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
+
+    &:hover {
+      background: #8a2c2c;
+      transition: all 0.3s ease-in-out;
+    }
+  }
 }
 
 .tab-wrap {
@@ -81,4 +97,48 @@
 
 .right-side {
   padding: 0 !important;
+}
+
+.chat-listbox {
+  border-bottom: 1px solid #ccc;
+  padding: 1rem;
+  width: 400px;
+  height: 100vh;
+  position: fixed;
+  right: 0;
+  top: 0;
+  cursor: pointer;
+  box-shadow: -10px 2px 21px 0px rgba(54, 45, 45, 0.66);
+  -webkit-box-shadow: -10px 2px 21px 0px rgba(54, 45, 45, 0.66);
+  -moz-box-shadow: -10px 2px 21px 0px rgba(54, 45, 45, 0.66);
+  &:hover {
+    background: #f5f5f5;
+  }
+}
+
+.chat-detail {
+  position: absolute;
+  border: 2px solid green;
+  width: calc(100% - 2rem);
+  height: 100%;
+  background: rgb(255, 236, 196);
+  z-index: 1;
+}
+
+.ant-drawer-content-wrapper {
+  width: 500px !important;
+}
+
+.closeBtn {
+  position: absolute;
+  left: -4rem;
+  top: 1rem;
+  width: 2rem;
+  height: 2rem;
+  background: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 1rem;
+  cursor: pointer;
 }
