--- a/src/index.scss
+++ b/src/index.scss
@@ -7,11 +7,12 @@
 }
 
 .here {
-  border: 2px solid red;
+  // border: 2px solid red;
 }
 .summ-wrap {
   display: flex;
   justify-content: space-around;
+  align-items: center;
   max-width: 120rem;
   width: calc(100% - 4rem);
   margin-bottom: 1rem;
@@ -36,4 +37,14 @@ ul {
   margin-block-start: 0;
   margin-block-end: 0;
   padding-inline-start: 0;
+}
+
+p,
+h1,
+h2,
+h3,
+h4,
+h5 {
+  margin-block-start: 0;
+  margin-block-end: 0;
 }
