--- a/src/custom.scss
+++ b/src/custom.scss
@@ -25,42 +25,50 @@
 //   min-width: 1440px;
 // }
 
+$drkgrn: #79ae92;
+$lggrn: #8aae9b;
+@mixin bg-drkgrn {
+  background: #79ae92;
+}
+
 .box {
   &.summary {
-    display: flex;
-    .left {
-      display: flex;
-      flex-direction: column;
-      gap: 1rem;
-      padding: 0.4rem;
-      &.active {
-        background: #fff;
-        border-top: 1px solid red;
-        border-bottom: 1px solid red;
-        position: relative;
-        &:before {
-          content: "";
-          position: absolute;
-          right: -13px;
-          top: 0;
-          height: 31px;
-          width: 1rem;
-          z-index: 1;
-          background: #fff;
-        }
-      }
+    width: 100%;
+    padding: 1rem 3rem 3rem;
+    // display: flex;
+    // .left {
+    //   display: flex;
+    //   flex-direction: column;
+    //   gap: 1rem;
+    //   padding: 0.4rem;
+    //   &.active {
+    //     background: #fff;
+    //     border-top: 1px solid red;
+    //     border-bottom: 1px solid red;
+    //     position: relative;
+    //     &:before {
+    //       content: "";
+    //       position: absolute;
+    //       right: -13px;
+    //       top: 0;
+    //       height: 31px;
+    //       width: 1rem;
+    //       z-index: 1;
+    //       background: #fff;
+    //     }
+    //   }
 
-      .selector {
-        display: flex;
-        align-items: center;
+    //   .selector {
+    //     display: flex;
+    //     align-items: center;
 
-        &.active {
-          background: #fff;
-          border-top: 1px solid red;
-          border-bottom: 1px solid red;
-        }
-      }
-    }
+    //     &.active {
+    //       background: #fff;
+    //       border-top: 1px solid red;
+    //       border-bottom: 1px solid red;
+    //     }
+    //   }
+    // }
 
     .right {
       position: relative;
@@ -74,18 +82,24 @@
   }
 
   &.chat-list-box {
-    border: 1px solid red;
+    border: 1px solid $drkgrn;
     padding: 1rem;
     display: flex;
     align-items: center;
     justify-content: flex-start;
     gap: 1rem;
     cursor: pointer;
-    transition: all 0.3s ease-in-out;
+    transition: all 0.01s ease-in-out;
 
     &:hover {
-      background: #8a2c2c;
-      transition: all 0.3s ease-in-out;
+      // background: #8a2c2c;
+      background: $drkgrn;
+      border: 2px solid $drkgrn;
+      transition: all 0.01s ease-in-out;
+    }
+
+    .desc {
+      text-align: left;
     }
   }
 }
@@ -99,6 +113,7 @@
   padding: 0 !important;
 }
 
+//chat
 .chat-listbox {
   border-bottom: 1px solid #ccc;
   padding: 1rem;
@@ -118,10 +133,10 @@
 
 .chat-detail {
   position: absolute;
-  border: 1px solid rgb(150, 140, 140);
+  border: 1px solid $drkgrn;
+  background: $lggrn;
   width: calc(100% - 2rem);
   height: 100%;
-  background: rgb(255, 236, 196);
   z-index: 1;
 
   .usr-info {
@@ -171,11 +186,11 @@
     .bg {
       background: #fff;
       width: 100%;
-      height: 100%;
+
       flex-shrink: 1;
       flex-grow: 1;
       text-align: left;
-      padding: 0 1rem !important;
+      padding: 10px 1rem !important;
 
       &.sent {
         text-align: right;
@@ -217,4 +232,71 @@
   justify-content: center;
   padding: 1rem;
   cursor: pointer;
+}
+
+.summ-wrap {
+  &.main {
+    display: flex;
+    justify-content: space-around;
+    max-width: 38rem;
+    width: calc(100% - 4rem);
+    margin: 2rem auto;
+    padding: 10px;
+    cursor: pointer;
+
+    .tit {
+      font-size: 1.2rem;
+      border: 1px solid #79ae92;
+      padding: 0rem 0px 1rem;
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+    }
+
+    .txt {
+      font-weight: 600;
+      font-size: 1rem;
+      background-color: #79ae92 !important;
+      padding: 0.8rem 0;
+      border-top-left-radius: 15px;
+      border-top-right-radius: 15px;
+    }
+    .num {
+      font-size: 1.2rem;
+    }
+    div {
+      &:hover {
+        background: #333 !important;
+        color: #fff !important;
+      }
+    }
+  }
+}
+
+.topsoldbox {
+  border: 1px solid $drkgrn;
+  margin-left: 1rem;
+  padding: 0;
+
+  .tit {
+    font-size: 1.2rem;
+    padding: 1rem;
+    @include bg-drkgrn;
+  }
+  .list {
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+    gap: 0.5rem;
+    font-size: 1rem;
+    margin-top: 1rem;
+    padding: 10px;
+  }
+}
+
+.mail-reply-wrap {
+  .mail-body {
+    margin: 1rem 0 2rem;
+    white-space: pre-wrap;
+  }
 }
